Fix extra padding below normal images

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -53,7 +53,7 @@ figure {
   & img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    position: absolute;
     background: url("/images/loaders/puff.svg") center center no-repeat;
   }
 
@@ -70,6 +70,8 @@ figure {
     height: auto;
 
     & img {
+      position: static;
+      object-fit: contain;
       max-height: $max-full-width-image;
     }
   }
